show provider name
include the provider name when displaying existing explanations
add a tooltip to the Explain error button in the appbar of the console
view